--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "simple-effector",
   "version": "1.0.0",
   "description": "simple effect components for react",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel lib -d build",
+    "lint": "eslint lib/**; exit 0",
+    "lint:watch": "esw -w lib/**",
+    "prepublish": "npm run build"
   },
   "author": "tauhoo",
   "license": "ISC",
   "dependencies": {
+    "react": "^16.4.0",
     "styled-components": "^3.2.6"
   }
 }
